# TCC-Controle-Visual-para-um-Manipulador-Movel-em-Ambiente-Simulado

./: README.md
husky_jaco_description/: CMakeLists.txt  package.xml
husky_jaco_description/config/: JacoJoints.yaml
husky_jaco_description/launch/: jaco_gazebo.launch  jaco_gazebo_controlled.launch
husky_jaco_description/urdf/: cameras.urdf.xacro  husky_jaco.urdf.xacro  husky_jaco_description.urdf.xacro  husky_jaco_robot.urdf.xacro  jaco_robot_arm.urdf.xacro  jaco_robot_gazebo_ctrl.urdf.xacro
husky_jaco_moveit/: CMakeLists.txt  package.xml
husky_jaco_moveit/config/: fake_controllers.yaml  husky.srdf  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
husky_jaco_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  husky_jaco_moveit.launch  husky_moveit_controller_manager.launch.xml  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
husky_jaco_navigation/: CMakeLists.txt  package.xml
husky_jaco_navigation/src/: navigation.py  navigation_pick_and_place (copy).py  navigation_pick_and_place.py  pick_n_place.py  pick_n_place2.py
